--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -1,10 +1,10 @@
 # image will be published to ghcr.io/<user>/<name>
-name: zircon-base-nvidia
+name: zircon-base
 # description will be included in the image's metadata
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/bluefin-dx-nvidia
+base-image: ghcr.io/ublue-os/bluefin-dx
 image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
