--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -1,5 +1,5 @@
 # image will be published to ghcr.io/<user>/<name>
-name: zircon-base
+name: sillica-base
 # description will be included in the image's metadata
 description: This is my personal OS image.
 
